Remove 1% text from donation overview.

--- a/bluebottle/bb_donations/templates/bb_donations/my_donations.hbs
+++ b/bluebottle/bb_donations/templates/bb_donations/my_donations.hbs
@@ -9,9 +9,11 @@
                 <figure class="account-avatar"><img {{bindAttr src="currentUser.getAvatar"}} /></figure>
 
                 <header class="account-title">
-                    {% blocktrans %}
-                        My 1% <em class="account-subtitle">Donations</em>
-                    {% endblocktrans %}
+                    {% trans "My Account" %}
+                        <em class="account-subtitle">
+                            {% trans "Donations" %}
+                        </em>
+
                 </header>
 
                 <ul class="tabs three">
