bb follow mail updates

--- a/bluebottle/bb_follow/templates/bb_follow/mails/wallpost_mail.mail.html
+++ b/bluebottle/bb_follow/templates/bb_follow/mails/wallpost_mail.mail.html
@@ -9,10 +9,10 @@ Hi {{first_name}},
 <br/>
 There has been an update on a {{follow_object}} you follow. 
 <br/><br/>
-Here's an excerpt of the update:<br/>
+Here's an excerpt of the update:<br/><br/>
 {{wallpost_text}}...
-<br/><br/>
+<br/><br/><br/>
 Read the full story <a href={{link}}>here</a>.
-
+<br/></br/>
 {% endblocktrans %}
 {% endblock %}
