--- a/bluebottle/bb_accounts/templates/bb_accounts/profile_form.hbs
+++ b/bluebottle/bb_accounts/templates/bb_accounts/profile_form.hbs
@@ -56,7 +56,7 @@
                     <div class="is-saved"><span class="flaticon solid checkmark-1">{% trans "Profile saved" %}</span></div>
                 {{/if}}
 
-                <button class="btn btn-iconed btn-primary btn-save" {{action 'save' model}}>
+                <button {{bind-attr class=":btn :btn-iconed :btn-primary :btn-save isDirty::disabled"}} {{action 'save' model}}>
                     <span class="flaticon solid checkmark-1"></span>
                     {{saveButtonText}}
                 </button>
