--- a/bluebottle/bb_tasks/templates/bb_tasks/task_summary.hbs
+++ b/bluebottle/bb_tasks/templates/bb_tasks/task_summary.hbs
@@ -9,7 +9,7 @@
             <strong class="item-title">{{title}}</strong>
             <span class="item-meta">
                 {{#if isStatusOpen}}
-                    <span class="item-people"><em>{{people_needed}} </em> {% trans "needed" %} / {{membersNeeded}} {% trans "accepted" %}</span>
+                    <span class="item-people"><em>{{people_needed}} </em> {% trans "needed" %} / {{acceptedMemberCount}} {% trans "accepted" %}</span>
                     <span class="item-time"><em>{{time_needed}}</em> {% trans "hours" %}</span>
                 {{/if}}
                 {{#if isStatusInProgress}}
