bind-attr is recommended over bindAttr

--- a/bluebottle/bb_tasks/templates/bb_tasks/task_preview.hbs
+++ b/bluebottle/bb_tasks/templates/bb_tasks/task_preview.hbs
@@ -11,7 +11,7 @@
 
             <span class="task-header">
                 <span class="task-image">
-                	<img {{bindAttr src="image" }} />
+                	<img {{bind-attr src="image" }} />
             	</span>
                 <span class="task-title">
                 	<h3>{{task.title}}</h3>
