handle image from task preview which doesn't have the 'square' version BOOK-1049

--- a/bluebottle/bb_tasks/templates/bb_tasks/_my_task_preview.hbs
+++ b/bluebottle/bb_tasks/templates/bb_tasks/_my_task_preview.hbs
@@ -9,7 +9,11 @@
                 {{#if task.project.image.square}}
                     <img {{bindAttr src="task.project.image.square" alt="task.title"}} />
                 {{else}}
-                    &nbsp;
+                    {{#if task.project.image}}
+                        <img {{bindAttr src="task.project.image" alt="task.title"}} />
+                    {{else}}
+                        &nbsp;
+                    {{/if}}
                 {{/if}}
             </figure>
             <div class="project-info">
