--- a/bluebottle/bb_tasks/templates/bb_tasks/task.hbs
+++ b/bluebottle/bb_tasks/templates/bb_tasks/task.hbs
@@ -57,7 +57,7 @@
                             {{#ifExpired deadline}}
                                 {% trans "Deadline passed" %}
                             {{else}}
-                                {{localize deadline formatting="X"}}
+                                {{localize deadline formatting="d"}}
                             {{/ifExpired}}
                         {{else}}
                             {% trans "No deadline" %}
