Fixed color breadcrumb + Show timestamp wallpost last

--- a/bluebottle/common/static/refactor-sass/pages/_project-detail-header.scss
+++ b/bluebottle/common/static/refactor-sass/pages/_project-detail-header.scss
@@ -90,6 +90,7 @@
                     text-overflow: ellipsis;
                     line-height: 25px;
                     text-decoration: none;
+                    color: $color-sec;
 
                     .project-linked {
                         position: relative;
@@ -126,6 +127,7 @@
                     }
 
                     &:hover {
+                        color: $color-pri;
 
                         .project-linked {
                             background-color: $color-pri;
