--- a/bluebottle/wallposts/templates/wallposts/_wallposts.hbs
+++ b/bluebottle/wallposts/templates/wallposts/_wallposts.hbs
@@ -45,6 +45,8 @@
         {{/if}}
     
     {{else}}
-        {{bb-wallpost-first-timestamp}} 
+        {{#unless wallpostRemaining}}
+            {{bb-wallpost-first-timestamp}}
+        {{/unless}}
     {{/if}}
 {% endtplhandlebars %}
