Align all project/task statusses and button

--- a/bluebottle/bb_projects/templates/bb_projects/_project_actions_without_funding.hbs
+++ b/bluebottle/bb_projects/templates/bb_projects/_project_actions_without_funding.hbs
@@ -31,7 +31,12 @@
                                 {% trans "Join a Task" %}
                             </strong>
                         </div>
+                    {{else}}
+                        <div class="project-closed project-task-join">
+                            <strong>{% trans "No open Tasks" %}</strong>
+                        </div>
                     {{/if}}
+
                 {{/if}}
             </div>
         </div>
