--- a/bluebottle/common/static/sass/base/_modals.scss
+++ b/bluebottle/common/static/sass/base/_modals.scss
@@ -117,8 +117,7 @@
 
 .modal-body {
     position: relative;
-    overflow-y: auto;
-    // max-height: 400px;
+    height: 194px;
     
     // Reset form margins
     form, fieldset, legend {
