--- a/bluebottle/common/static/sass/base/_forms.scss
+++ b/bluebottle/common/static/sass/base/_forms.scss
@@ -126,6 +126,12 @@ label, .control-label {
         }
     }
 
+    small {
+        margin-bottom: 8px;
+        display: block;
+        line-height: 20px;
+    }
+
     .controls {
         position: relative;
         @include grid(36,1,2);
