added subheading + little tweaks for tools

--- a/bluebottle/common/static/sass/new-sass/modules/_video.scss
+++ b/bluebottle/common/static/sass/new-sass/modules/_video.scss
@@ -95,10 +95,17 @@
             margin-left: auto;
             margin-right: auto;     
             z-index: 9;
-            width: 40%;
+            width: 50%;
 
             h1 {
                 text-align: center;
+            }
+
+            .sub-heading {
+                text-align: center;
+                width: 70%;
+                margin: 30px auto;
+                font-size: 20px;
             }
         }
 
