--- a/bluebottle/bb_projects/templates/admin_tools/dashboard/recent_ended_projects.html
+++ b/bluebottle/bb_projects/templates/admin_tools/dashboard/recent_ended_projects.html
@@ -1,11 +1,18 @@
 {% extends "admin_tools/dashboard/module.html" %}
-{% load i18n %}
+{% load i18n humanize %}
 {% block module_content %}
+<div class="dashboard-module-content">
+    <p>
+        {% blocktrans %}
+            Recently ended campaigns.
+        {% endblocktrans %}
+    </p>
+</div>
 <ul>
     {% spaceless %}
     {% for project in module.children %}
     <li class="{% cycle 'odd' 'even' %}">
-        <span class="float-right">{{ project.date_submitted|date }}</span>
+        <span class="float-right">{{ project.campaign_ended|date }}</span>
         <a href="{{ admin_url }}projects/project/{{ project.id }}" >{{ project.title }}</a>
     </li>
     {% endfor %}
