--- a/bluebottle/common/templates/bluebottle/footer.hbs
+++ b/bluebottle/common/templates/bluebottle/footer.hbs
@@ -3,145 +3,86 @@
 
 {% tplhandlebars "_footer" %}
 
-    <div class="l-section" id="footer" >
-        <div class="l-wrapper">
-            <section class="footer-content">
-                <ul class="footer-menu">
-                    <li>
-                        {% block_verbatim  'footer_block1' %}
-                            <h3>{% blocktrans %}Get involved{% endblocktrans %}</h3>
+    <div id="home-footer">
+        <div class="l-section" id="footer">
+            <div id="footer-links">
+                <div class="l-wrapper" id="footer-nav">
+                    <div class="row two">
+                        <div class="col3">
+                            <h3>{% trans "Do good" %}</h3>
                             <ul>
-                                <li>
-                                    <a {{action 'showPage' 'about'}} href="/#!/pages/about">
-                                        {% blocktrans %}About{% endblocktrans %}
-                                    </a>
-                                </li>
+                                <li>{{#link-to 'projectList'}}{% trans "Browse campaigns" %}{{/link-to}}</li>
+                                <li>{{#link-to 'taskList'}}{% trans "Browse tasks" %}{{/link-to}}</li>
+                                <li>{{#link-to 'page' 'start-campaign'}}{% trans "Start a campaign" %}{{/link-to}}</li>
+                                <li>{{#link-to 'business'}}{% trans "Let's do Business" %}{{/link-to}}</li>
+                                <li>{{#link-to 'crowdfunding'}}{% trans "How to crowdfund" %}{{/link-to}}</li>
                             </ul>
-                        {% endblock_verbatim %}
-                    </li>
-
-                    <li>
-                        {% block_verbatim  'footer_block2' %}
-                            <h3>{% blocktrans %}About Bluebottle{% endblocktrans %}</h3>
-                            <ul>
-                                <li>
-                                    <a {{action 'showPage' 'faq'}} href="/#!/pages/faq">{% trans "Frequently Asked Questions" %}</a>
-                                </li>
-                                <li>
-                                    <a {{action 'showPage' 'work'}} href="/#!/pages/work">
-                                        {% blocktrans %}Work at Bluebottle{% endblocktrans %}
-                                    </a>
-                                </li>
-                                <li>
-                                    {% trans "Contact" %}
-                                </li>
-                            </ul>
-                        {% endblock_verbatim %}
-
-                    </li>
-
-                    <li>
-                        {% block_verbatim  'footer_block3' %}
-                            <h3>{% trans "Discover More" %}</h3>
-                            <ul>
-                                <li>
-                                    <a {{action 'showPage' 'more'}} href="/#!/pages/more">
-                                        {% trans "More about Bluebottle" %}
-                                    </a>
-                                </li>
-                                <li>
-                                    <a  href="http://github.com/onepercentclub/bluebottle">
-                                        {% trans "Github" %}
-                                    </a>
-                                </li>
-
-                            </ul>
-                        {% endblock_verbatim %}
-                    </li>
-
-                    <li>
-                        {% block_verbatim  'footer_block4' %}
-                            <h3>{% blocktrans %}Social{% endblocktrans %}</h3>
-                            <iframe src="//www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fonepercentclub&amp;send=false&amp;layout=button_count&amp;width=450&amp;show_faces=false&amp;font&amp;colorscheme=light&amp;action=like&amp;height=21&amp;appId=265978350087756" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:90px; height:21px;" allowTransparency="true"></iframe>
-                            <iframe allowtransparency="true" frameborder="0" scrolling="no" src="http://platform.twitter.com/widgets/tweet_button.html?url=http%3A%2F%2Fonepercentclub.com&text=" style="width:115px; height:21px;"></iframe>
-                            <ul class="footer-social-links">
-                                <li>
-                                    <a href="http://www.facebook.com/onepercentclub" target="_blank">
-                                        <span class="flaticon social facebook-1"></span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="http://twitter.com/1percentclub" target="_blank">
-                                        <span class="flaticon social twitter-1"></span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="http://www.flickr.com/photos/1procentclub/" target="_blank">
-                                        <span class="flaticon social flickr-1"></span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="http://www.linkedin.com/groups?gid=1071287&trk=hb_side_g" target="_blank">
-                                        <span class="flaticon social linkedin-1"></span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="http://www.youtube.com/user/1Procentclub" target="_blank">
-                                        <span class="flaticon social youtube-1"></span>
-                                    </a>
-                                </li>
-                            </ul>
-                        {% endblock_verbatim %}
-                    </li>
-                </ul>
-
-                <hr />
-
-                <div class="footer-news">
-                    <h3>{% trans "News" %}</h3>
-                    <ul>
-                    {{#each news}}
-                        <li>
-                            <a {{action 'showNews' this.id}}>
-                                <span class="flaticon solid right-2"></span> {{ title }}
-                            </a>
-                        </li>
-                    {{/each}}
-                    </ul>
-                </div>
-
-                {{#unless currentUser.isAuthenticated}}
-                    {% block_verbatim  'footer_join' %}
-                        <div class="footer-join-us">
-                            <h3>{% blocktrans %}Join Bluebottle{% endblocktrans %}</h3>
-                            <p>{% blocktrans %}Join our project!{% endblocktrans %}</p>
-                            {{#link-to 'signup' classNames="btn btn-primary"}}{% blocktrans %}Join Bluebottle{% endblocktrans %}{{/link-to}}
                         </div>
-                    {% endblock_verbatim %}
-                {{/unless}}
+                        <div class="col3">
+                            <h3>{% trans "Need help?" %}</h3>
+                            <ul>
+                                <li>{{#link-to 'page' 'faq'}}{% trans "FAQ" %}{{/link-to}}</li>
+                                <li>{{#link-to 'page' 'terms-and-conditions'}}{% trans "Terms of service" %}{{/link-to}}</li>
+                                <li>{{#link-to 'page' 'organisatie'}}{% trans "ANBI" %}{{/link-to}}</li>
+                                <li>{{#link-to 'page' 'privacy'}}{% trans "Privacy policy" %}{{/link-to}}</li>
+                                <li>{{#link-to 'contactMessage'}}{% trans "Contact" %}{{/link-to}}</li>
+                            </ul>
+                        </div>
+                        <div class="col3">
+                            <h3>{% blocktrans %}About 1%Club{% endblocktrans %}</h3>
+                            <ul>
+                                <li>{{#link-to 'page' 'about'}}{% blocktrans %}About 1%Club{% endblocktrans %}{{/link-to}}</li>
+                                <li>{{#link-to 'page' 'story'}}{% trans "Our story" %}{{/link-to}}</li>
+                                <li>{{#link-to 'page' 'meet-team'}}{% trans "Meet the team" %}{{/link-to}}</li>
+                                <li>{{#link-to 'page' 'partners'}}{% trans "Meet our partners" %}{{/link-to}}</li>
+                                <li>{{#link-to 'page' 'press'}}{% trans "Press" %}{{/link-to}}</li>
+                                <li>{{#link-to 'page' 'work'}}{% blocktrans %}Work at 1%Club{% endblocktrans %}{{/link-to}}</li>
+                                <li>{{#link-to 'news'}}{% trans "News" %}{{/link-to}}</li>
+                            </ul>
+                        </div>
+                        <div class="col3">
+                            <h3>{% trans "Let's connect" %}</h3>
+                            <ul>
+                                <li class="social-facebook"><a target="_blank" href="http://facebook.com/onepercentclub">{% trans "Facebook" %}</a></li>
+                                <li class="social-twitter"><a target="_blank" href="https://twitter.com/1procentclub">{% trans "Twitter" %}</a></li>
+                                <li class="social-linkedin"><a target="_blank" href="https://www.linkedin.com/groups?mostRecent=&gid=1071287">{% trans "LinkedIn" %}</a></li>
+                                <li class="social-youtube"><a target="_blank" href="http://youtube.com/1procentclub/">{% trans "Youtube" %}</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="l-section" id="footer-contact">
+                <div class="l-wrapper">
+                    <div class="row">
+                        <div class="col12">
+                            <p>{% trans "You can always contact us for questions via" %} <a href="mailto:info@onepercentclub.com">info@onepercentclub.com</a> {% trans "and" %} <a href="tel:+3120 715 8980">(+31) 20 715 8980</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="l-section" id="footer-copyright">
+                <div class="l-wrapper">
+                    <div class="row">
 
-            </section>
-        </div>
+                        <div class="col3 copy">
+                            <p>© 2014 - 1%Club
+                                {{#if GIT_COMMIT}}
+                                    / Commit: <a target='_blank' href='https://github.com/onepercentclub/onepercentclub-site/commit/{{unbound GIT_COMMIT}}'>{{unbound GIT_COMMIT}}</a>
+                                {{/if}}
+                            </p>
+                        </div>
 
-        <div class="l-section copyright">
-            <div class="l-wrapper">
-                {% block_verbatim  'footer_copyright' %}
-                    <ul>
-                        <li>
-                            &copy;2013 Bluebottle
-                        </li>
-                        <li>
-                            <a {{action 'showPage' 'terms-and-conditions'}} href="/#!/pages/terms-and-conditions">{% trans "General Conditions" %}</a>&nbsp;
-                            <a {{action 'showPage' 'privacy'}} href="/#!/pages/privacy">{% trans "Privacy Policy" %}</a>
-                        </li>
-                        <li>
-                            {% trans "Give us feedback" %}
-                        </li>
-                    </ul>
-                {% endblock_verbatim %}
+                        <div class="col6 footer-back-to-top">
+                            <a {{action 'goTo' '#site'}}>{% trans "Go to top" %}</a>
+                        </div>
+
+                        <div class="col3 give-us-feedback">
+                            <p>{{#link-to 'page' 'contact'}}{% trans "Give us feedback" %}{{/link-to}}</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-
     </div>
-
 {% endtplhandlebars %}
