--- a/frontend/app/templates/donations/base.hbs
+++ b/frontend/app/templates/donations/base.hbs
@@ -3,12 +3,12 @@
 {% load static %}
 
 
-{% include "bb_donations/donation.hbs" %}
-{% include "bb_donations/_donation_amount.hbs"%}
+{% include "donations/donation.hbs" %}
+{% include "donations/_donation_amount.hbs"%}
 
-{% include 'bb_donations/donation_success.hbs' %}
-{% include 'bb_donations/my_donation_list.hbs' %}
-{% include 'bb_donations/my_donations.hbs' %}
+{% include 'donations/donation_success.hbs' %}
+{% include 'donations/my_donation_list.hbs' %}
+{% include 'donations/my_donations.hbs' %}
 
-{% include "bb_donations/_donation_errors.hbs" %}
-{% include "bb_donations/_donation_canvas.hbs" %}
+{% include "donations/_donation_errors.hbs" %}
+{% include "donations/_donation_canvas.hbs" %}
