--- a/frontend/app/templates/fundraisers/base.hbs
+++ b/frontend/app/templates/fundraisers/base.hbs
@@ -1,16 +1,16 @@
-{% include "bb_fundraisers/fundraiser.hbs" %}
-{% include "bb_fundraisers/_fundraiser_actions.hbs" %}
-{% include "bb_fundraisers/_fundraiser_donation_list_header.hbs" %}
-{% include "bb_fundraisers/fundraiser_donation_list.hbs" %}
-{% include "bb_fundraisers/fundraiser_edit.hbs" %}
-{% include "bb_fundraisers/fundraiser_form.hbs" %}
-{% include "bb_fundraisers/fundraiser_sidebar.hbs" %}
-{% include "bb_fundraisers/my_fundraiser_list.hbs" %}
-{% include "bb_fundraisers/my_fundraiser_top.hbs" %}
-{% include "bb_fundraisers/fundraiser_new.hbs" %}
-{% include "bb_fundraisers/project_fundraiser.hbs" %}
-{% include "bb_fundraisers/project_fundraiser_all.hbs" %}
-{% include "bb_fundraisers/project_fundraiser_list.hbs" %}
-{% include "bb_fundraisers/project_fundraiser_popup.hbs" %}
+{% include "fundraisers/fundraiser.hbs" %}
+{% include "fundraisers/_fundraiser_actions.hbs" %}
+{% include "fundraisers/_fundraiser_donation_list_header.hbs" %}
+{% include "fundraisers/fundraiser_donation_list.hbs" %}
+{% include "fundraisers/fundraiser_edit.hbs" %}
+{% include "fundraisers/fundraiser_form.hbs" %}
+{% include "fundraisers/fundraiser_sidebar.hbs" %}
+{% include "fundraisers/my_fundraiser_list.hbs" %}
+{% include "fundraisers/my_fundraiser_top.hbs" %}
+{% include "fundraisers/fundraiser_new.hbs" %}
+{% include "fundraisers/project_fundraiser.hbs" %}
+{% include "fundraisers/project_fundraiser_all.hbs" %}
+{% include "fundraisers/project_fundraiser_list.hbs" %}
+{% include "fundraisers/project_fundraiser_popup.hbs" %}
 
-{% include "bb_fundraisers/components/project_fundraiser_item.hbs" %}
+{% include "fundraisers/components/project_fundraiser_item.hbs" %}
