--- a/frontend/app/templates/projects/base.hbs
+++ b/frontend/app/templates/projects/base.hbs
@@ -1,49 +1,49 @@
-{% include 'bb_projects/manage/main.hbs' %}
+{% include 'projects/manage/main.hbs' %}
 
-{% include 'bb_projects/components/project-donations.hbs' %}
-{% include 'bb_projects/components/simple-project-supporters.hbs' %}
+{% include 'projects/components/project-donations.hbs' %}
+{% include 'projects/components/simple-project-supporters.hbs' %}
 
-{% include 'bb_projects/manage/start.hbs' %}
-{% include 'bb_projects/manage/pitch.hbs' %}
-{% include 'bb_projects/manage/_story_legend.hbs' %}
-{% include 'bb_projects/manage/story_fields.hbs' %}
-{% include 'bb_projects/manage/story.hbs' %}
-{% include 'bb_projects/manage/map_picker.hbs' %}
+{% include 'projects/manage/start.hbs' %}
+{% include 'projects/manage/pitch.hbs' %}
+{% include 'projects/manage/_story_legend.hbs' %}
+{% include 'projects/manage/story_fields.hbs' %}
+{% include 'projects/manage/story.hbs' %}
+{% include 'projects/manage/map_picker.hbs' %}
 
-{% include 'bb_projects/manage/budget.hbs' %}
+{% include 'projects/manage/budget.hbs' %}
 
-{% include 'bb_projects/manage/submit.hbs' %}
-{% include 'bb_projects/manage/review.hbs' %}
-{% include 'bb_projects/manage/rejected.hbs' %}
+{% include 'projects/manage/submit.hbs' %}
+{% include 'projects/manage/review.hbs' %}
+{% include 'projects/manage/rejected.hbs' %}
 
-{% include 'bb_projects/manage/project_list.hbs' %}
-{% include 'bb_projects/manage/top.hbs' %}
-{% include 'bb_projects/manage/updates.hbs' %}
-{% include 'bb_projects/manage/footer.hbs' %}
-{% include 'bb_projects/manage/sidebar.hbs' %}
-{% include 'bb_projects/manage/submit_details_fields.hbs' %}
-{% include 'bb_projects/manage/submit_pitch_fields.hbs' %}
-{% include 'bb_projects/manage/submit_story_fields.hbs' %}
-{% include 'bb_projects/manage/submit_organization_fields.hbs' %}
-{% include 'bb_projects/_project_actions.hbs' %}
-{% include 'bb_projects/manage/_my_project_start_intro.hbs' %}
-{% include 'bb_projects/manage/_project_list_create_btn.hbs' %}
-{% include 'bb_projects/manage/_my_project_submit_final.hbs' %}
-{% include 'bb_projects/manage/_my_project_submit_check.hbs' %}
-{% include 'bb_projects/manage/_my_project_preview.hbs' %}
+{% include 'projects/manage/project_list.hbs' %}
+{% include 'projects/manage/top.hbs' %}
+{% include 'projects/manage/updates.hbs' %}
+{% include 'projects/manage/footer.hbs' %}
+{% include 'projects/manage/sidebar.hbs' %}
+{% include 'projects/manage/submit_details_fields.hbs' %}
+{% include 'projects/manage/submit_pitch_fields.hbs' %}
+{% include 'projects/manage/submit_story_fields.hbs' %}
+{% include 'projects/manage/submit_organization_fields.hbs' %}
+{% include 'projects/_project_actions.hbs' %}
+{% include 'projects/manage/_my_project_start_intro.hbs' %}
+{% include 'projects/manage/_project_list_create_btn.hbs' %}
+{% include 'projects/manage/_my_project_submit_final.hbs' %}
+{% include 'projects/manage/_my_project_submit_check.hbs' %}
+{% include 'projects/manage/_my_project_preview.hbs' %}
 
-{% include 'bb_projects/project.hbs' %}
+{% include 'projects/project.hbs' %}
 
-{% include 'bb_projects/bb_progressbar.hbs' %}
-{% include 'bb_projects/project_donation.hbs' %}
-{% include 'bb_projects/project_list.hbs' %}
-{% include 'bb_projects/project_members.hbs' %}
-{% include 'bb_projects/project_plan.hbs' %}
-{% include 'bb_projects/project_preview.hbs' %}
-{% include 'bb_projects/project_preview_list.hbs' %}
-{% include 'bb_projects/project_search_form.hbs' %}
-{% include 'bb_projects/project_donation_list.hbs' %}
-{% include 'bb_projects/_project_preview_header.hbs' %}
-{% include 'bb_projects/_project_preview_status_info.hbs' %}
-{% include 'bb_projects/_project_actions_without_funding.hbs' %}
-{% include 'bb_projects/_project_actions_with_funding.hbs' %}
+{% include 'projects/bb_progressbar.hbs' %}
+{% include 'projects/project_donation.hbs' %}
+{% include 'projects/project_list.hbs' %}
+{% include 'projects/project_members.hbs' %}
+{% include 'projects/project_plan.hbs' %}
+{% include 'projects/project_preview.hbs' %}
+{% include 'projects/project_preview_list.hbs' %}
+{% include 'projects/project_search_form.hbs' %}
+{% include 'projects/project_donation_list.hbs' %}
+{% include 'projects/_project_preview_header.hbs' %}
+{% include 'projects/_project_preview_status_info.hbs' %}
+{% include 'projects/_project_actions_without_funding.hbs' %}
+{% include 'projects/_project_actions_with_funding.hbs' %}
