--- a/frontend/app/templates/members/base.hbs
+++ b/frontend/app/templates/members/base.hbs
@@ -1,44 +1,40 @@
 {% load bb_ember i18n static %}
 
-{% include "bb_accounts/_my_menu.hbs" %}
-{% include "bb_accounts/_account_nav_anon.hbs" %}
-{% include "bb_accounts/_profile_anchor.hbs" %}
+{% include "members/_my_menu.hbs" %}
+{% include "members/_account_nav_anon.hbs" %}
+{% include "members/_profile_anchor.hbs" %}
 
 {# Login Templates #}
-{% include "bb_accounts/_social_login_errors.hbs" %}
-{% include "bb_accounts/_social_logins.hbs" %}
-{% include "bb_accounts/_login_footer.hbs" %}
-{% include "bb_accounts/_standard_login_form.hbs" %}
-{% include "bb_accounts/_standard_login_errors.hbs" %}
-{% include "bb_accounts/_standard_login_content.hbs" %}
-{% include "bb_accounts/_matched_login_content.hbs" %}
-{% include "bb_accounts/_matched_login_header.hbs" %}
-{% include "bb_accounts/login.hbs" %}
-{% include "bb_accounts/disable.hbs" %}
+{% include "members/_social_login_errors.hbs" %}
+{% include "members/_social_logins.hbs" %}
+{% include "members/_login_footer.hbs" %}
+{% include "members/_standard_login_form.hbs" %}
+{% include "members/_standard_login_errors.hbs" %}
+{% include "members/_standard_login_content.hbs" %}
+{% include "members/_matched_login_content.hbs" %}
+{% include "members/_matched_login_header.hbs" %}
+{% include "members/login.hbs" %}
+{% include "members/disable.hbs" %}
 
 {# Password Reset Templates #}
-{% include "bb_accounts/account_nav.hbs" %}
-{% include "bb_accounts/password_reset.hbs" %}
-{% include "bb_accounts/password_request.hbs" %}
+{% include "members/account_nav.hbs" %}
+{% include "members/password_reset.hbs" %}
+{% include "members/password_request.hbs" %}
 
 {# Signup Templates #}
-{% include "bb_accounts/_standard_signup_form.hbs" %}
-{% include "bb_accounts/_signup_errors.hbs" %}
-{% include "bb_accounts/_signup_sidebar.hbs" %}
-{% include "bb_accounts/_signup_content.hbs" %}
-{% include "bb_accounts/signup.hbs" %}
+{% include "members/_standard_signup_form.hbs" %}
+{% include "members/_signup_errors.hbs" %}
+{% include "members/_signup_sidebar.hbs" %}
+{% include "members/_signup_content.hbs" %}
+{% include "members/signup.hbs" %}
 
 {# Personal profile page #}
-{% include "bb_accounts/profile_nav.hbs" %}
-{% include "bb_accounts/profile_form.hbs" %}
-{% include "bb_accounts/account_settings.hbs" %}
+{% include "members/profile_nav.hbs" %}
+{% include "members/profile_form.hbs" %}
+{% include "members/account_settings.hbs" %}
 
 {# Public profile page #}
 
-{% include "bb_accounts/user_modal.hbs" %}
-{% include "bb_accounts/view_profile.hbs" %}
-{% include "bb_accounts/profile_components.hbs" %}
-
-{% block extra_templates %}
-
-{% endblock %}
+{% include "members/user_modal.hbs" %}
+{% include "members/view_profile.hbs" %}
+{% include "members/profile_components.hbs" %}
