--- a/frontend/app/templates/orders/base.hbs
+++ b/frontend/app/templates/orders/base.hbs
@@ -3,9 +3,9 @@
 {% load static %}
 
 
-{% include "bb_orders/order_signup.hbs" %}
-{% include "bb_orders/_order_signup_footer.hbs" %}
-{% include "bb_orders/order_login.hbs" %}
-{% include "bb_orders/_order_login_footer.hbs" %}
-{% include "bb_orders/_matched_order_login_header.hbs" %}
-{% include "bb_orders/_standard_order_login_content.hbs" %}
+{% include "orders/order_signup.hbs" %}
+{% include "orders/_order_signup_footer.hbs" %}
+{% include "orders/order_login.hbs" %}
+{% include "orders/_order_login_footer.hbs" %}
+{% include "orders/_matched_order_login_header.hbs" %}
+{% include "orders/_standard_order_login_content.hbs" %}
