--- a/frontend/app/templates/tasks/base.hbs
+++ b/frontend/app/templates/tasks/base.hbs
@@ -2,23 +2,23 @@
 {% load i18n %}
 {% load static %}
 
-{% include 'bb_tasks/task.hbs' %}
-{% include 'bb_tasks/task_activity.hbs' %}
+{% include 'tasks/task.hbs' %}
+{% include 'tasks/task_activity.hbs' %}
 
-{% include 'bb_tasks/task_new.hbs' %}
-{% include 'bb_tasks/task_edit.hbs' %}
+{% include 'tasks/task_new.hbs' %}
+{% include 'tasks/task_edit.hbs' %}
 
-{% include 'bb_tasks/task_list.hbs' %}
-{% include 'bb_tasks/task_search_form.hbs' %}
-{% include 'bb_tasks/task_preview.hbs' %}
-{% include 'bb_tasks/task_summary.hbs' %}
+{% include 'tasks/task_list.hbs' %}
+{% include 'tasks/task_search_form.hbs' %}
+{% include 'tasks/task_preview.hbs' %}
+{% include 'tasks/task_summary.hbs' %}
 
-{% include 'bb_tasks/task_member_apply.hbs' %}
-{% include 'bb_tasks/task_member_edit.hbs' %}
-{% include 'bb_tasks/task_member.hbs' %}
+{% include 'tasks/task_member_apply.hbs' %}
+{% include 'tasks/task_member_edit.hbs' %}
+{% include 'tasks/task_member.hbs' %}
 
-{% include 'bb_tasks/task_file_new.hbs' %}
-{% include 'bb_tasks/project_tasks.hbs' %}
+{% include 'tasks/task_file_new.hbs' %}
+{% include 'tasks/project_tasks.hbs' %}
 
-{% include 'bb_tasks/my_tasks.hbs' %}
-{% include 'bb_tasks/_my_task_preview.hbs' %}
+{% include 'tasks/my_tasks.hbs' %}
+{% include 'tasks/_my_task_preview.hbs' %}
