fix privacy policy

--- a/bluebottle/common/static/sass/modules/_modal.scss
+++ b/bluebottle/common/static/sass/modules/_modal.scss
@@ -300,6 +300,13 @@ $gray-border-hover                                         : #9F9F9F;
 				font-weight: bold;
 			}
 
+			&.terms {
+				.terms-contents {
+					height: 190px;
+					overflow-y: auto;
+				}
+			}
+
 		}
 
 		.modal-fullscreen-close {
