allow configurable sharing options

--- a/bluebottle/utils/templates/utils/social_share.hbs
+++ b/bluebottle/utils/templates/utils/social_share.hbs
@@ -15,7 +15,7 @@
                     <li><a {{action shareOnTwitter target="view"}} class="action-twitter">{% trans "Share on Twitter" %}</a></li>
                     {{/if}}
                     {{#if view.shareOptions.flyer }}
-                    <li><a {{action shareOnTwitter target="view"}} class="action-twitter">{% trans "Share flyer via email" %}</a></li>
+                    <li><a {{action shareOnFlyer target="view"}} class="action-flyer">{% trans "Share flyer via email" %}</a></li>
                     {{/if}}
                     {{!-- <li><a {{action shareLinkedIn target="view"}} class="action-linkedin">{% trans 'Share on Linkedin'%}</a></li>
                     <li><a {{action shareEmbedded target="view"}} class="action-embed">{% trans 'Embed on your site'%}</a></li>
