base share flyer implementation: modal, view, controller

--- a/bluebottle/utils/templates/utils/base.hbs
+++ b/bluebottle/utils/templates/utils/base.hbs
@@ -2,6 +2,7 @@
 
 {% include 'utils/social_share.hbs' %}
 {% include 'utils/share_embedded.hbs' %}
+{% include 'utils/share_flyer.hbs' %}
 
 {% include 'utils/tag_widget.hbs' %}
 {% include 'utils/bb_flash.hbs' %}
