--- a/bluebottle/utils/templates/utils/share_flyer.hbs
+++ b/bluebottle/utils/templates/utils/share_flyer.hbs
@@ -14,14 +14,14 @@
 
         </big>
 
-         <label for="contactName">{% trans "Recipients name" %}* </label>
-        {{input id="contactName" valueBinding='share_name' type="text" name="share_name" maxlength="254" placeholder=App.translatables.placeholders.share_name classBinding="errorList.share_name.length:error"}}
+         <label for="shareName">{% trans "Recipients name" %}* </label>
+        {{input id="shareName" valueBinding='share_name' type="text" name="share_name" maxlength="254" placeholder=App.translatables.placeholders.share_name classBinding="errorList.share_name.length:error"}}
 
-         <label for="contactEmail">{% trans "Recipients email" %}* </label>
-        {{input id="contactEmail" valueBinding='share_email' type="text" name="share_email" maxlength="254" placeholder=App.translatables.placeholders.share_email classBinding="errorList.share_email.length:error"}}
+         <label for="shareEmail">{% trans "Recipients email" %}* </label>
+        {{input id="shareEmail" valueBinding='share_email' type="text" name="share_email" maxlength="254" placeholder=App.translatables.placeholders.share_email classBinding="errorList.share_email.length:error"}}
 
-         <label for="contactMotivation">{% trans "Your motivation" %}*  0/250</label>
-        {{view Ember.TextArea id="contactMotivation" valueBinding='share_motivation' name="share_motivation" maxlength="254" placeholderBinding=App.translatables.placeholders.share_motivation classBinding="errorList.share_motivation.length:error"}}
+         <label for="shareMotivation">{% trans "Your motivation" %}* <span class="counter-holder">{{bb-char-count textBinding='share_motivation' maxLength=250 }}</label>
+        {{view Ember.TextArea id="shareMotivation" valueBinding='share_motivation' name="share_motivation" maxlength="254" placeholderBinding=App.translatables.placeholders.share_motivation classBinding="errorList.share_motivation.length:error"}}
         <label for="sendCC">{% trans "Send me a copy (cc)" %}</label>
         {{view Ember.Checkbox id="sendCC" valueBinding="share_cc" name="share_cc"}}
 
