--- a/bluebottle/common/static/sass/new-sass/layout/_header.scss
+++ b/bluebottle/common/static/sass/new-sass/layout/_header.scss
@@ -202,7 +202,8 @@
                 margin-right: 1em;
 
                 &:hover {
-                    border-color: $color-secondary;
+                    border-color: $color-primary;
+                    color: $color-primary;
                 }
             }
         }
