BOOK-1129, BOOK-1124, BOOK-1125
- fix dropdown ie
- fix movie ie
- fix styling modal apply task

--- a/bluebottle/common/static/sass/base/_modals.scss
+++ b/bluebottle/common/static/sass/base/_modals.scss
@@ -117,13 +117,17 @@
 
 .modal-body {
     position: relative;
-    height: 194px;
+    max-height: 254px;
     
     // Reset form margins
     form, fieldset, legend {
         padding: 0;
         margin: 0;
         background: none;
+    }
+
+    textarea, input {
+        margin-bottom: 5px;
     }
     
     .control-label {
