Fix extension of admin donation list

--- a/bluebottle/utils/templates/utils/admin/change_list.html
+++ b/bluebottle/utils/templates/utils/admin/change_list.html
@@ -1,4 +1,4 @@
-{% extends "admin:admin/change_list.html" %}
+{% extends "admin/change_list.html" %}
 {% load i18n admin_static admin_list %}
 {% load admin_urls %}
 {% load humanize %}
