follow mail templates update

--- a/bluebottle/bb_follow/templates/bb_follow/mails/wallpost_mail.mail.html
+++ b/bluebottle/bb_follow/templates/bb_follow/mails/wallpost_mail.mail.html
@@ -7,12 +7,12 @@ Hi {{first_name}},
 
 <br/>
 <br/>
-There has been an update on a {{follow_object}} you follow. 
+There has been a new post on a {{follow_object}} you follow. 
 <br/><br/>
-Here's the update:<br/><br/>
-{{wallpost_text}}
+Here's part of the post:<br/><br/>
+{{wallpost_text}}...
 <br/><br/><br/>
-Read the full story <a href={{link}}>here</a>.
+Check the wall <a href={{link}}>here</a> for the full update.
 <br/></br/>
 {% endblocktrans %}
 {% endblock %}
