updated cc func

--- a/bluebottle/utils/templates/utils/share_flyer.hbs
+++ b/bluebottle/utils/templates/utils/share_flyer.hbs
@@ -30,7 +30,7 @@
         </div>
 
         <label for="sendCC" class="modal-checkbox">
-            {{view Ember.Checkbox id="sendCC" valueBinding="share_cc" name="share_cc"}}
+            {{view Ember.Checkbox id="sendCC" checkedBinding="share_cc" name="share_cc"}}
             <span></span>
             {% trans "Send me a copy (cc)" %}
         </label>
