clean out more frontend stuff and replace base template with basic version

--- a/bluebottle/common/templates/base.html
+++ b/bluebottle/common/templates/base.html
@@ -1,1 +1,10 @@
-{% extends "bluebottle.html" %}
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Bluebottle</title>
+    </head>
+
+    <body>
+    {% block content %}{% endblock %}
+    </body>
+</html>
