--- a/bluebottle/wallposts/templates/admin/wallposts/mediawallpost_gallery.html
+++ b/bluebottle/wallposts/templates/admin/wallposts/mediawallpost_gallery.html
@@ -1,2 +1,2 @@
-{# whitespace, esp <br>, seems to be significant #}
-{% for photo in images %} <a href="{{photo}}" target="_blank"> <img src="{{photo}}" style="height: 100px"/> </a> {% endfor %}
+{# whitespace seems to be significant - it appears to be replaced by <br>'s #}
+{% for photo in images %} <a href="{{photo.full}}" target="_blank"> <img src="{{photo.thumb}}" style="height: 100px"/> </a> {% endfor %}
