--- a/bluebottle/wallposts/templates/admin/wallposts/mediawallpost_photoinline.html
+++ b/bluebottle/wallposts/templates/admin/wallposts/mediawallpost_photoinline.html
@@ -1,3 +1,3 @@
-<a href="{{image_url}}" target="_blank">
-<img src="{{image_url}}" style="height: 100px" />
+<a href="{{image_full_url}}" target="_blank">
+<img src="{{image_thumb_url}}" />
 </a>
