--- a/bluebottle/terms/templates/terms/terms_modal.hbs
+++ b/bluebottle/terms/templates/terms/terms_modal.hbs
@@ -6,35 +6,44 @@
 {% tplhandlebars "terms_modal" %}
 
     <div {{bindAttr class=":modal-fullscreen-content contents:terms"}}>
+        <span {{action 'closeModal'}} class="modal-fullscreen-close"></span>
+        <h4>{% trans 'Privacy policy' %}</h4>
+        <small>
+            {% blocktrans %}
+                Please review and accept our latest Terms & Conditions. 
+            {% endblocktrans %}
+        </small>
         <div id="profile-preview">
-            <div class="modal-header">
-                <header class="profile-header">
-                    <h3 class="member-name">{% trans 'Privacy policy' %}</h3>
-                </header>
-            </div>
-
             <div class="modal-body">
                 <div class="terms-contents">
                     {{{contents}}}
                 </div>
             </div>
-
-            <br/>
-            <div class="modal-footer profile-preview-actions">
+        </div>
+    </div>
+    <div class="modal-fullscreen-footer terms">
+        <div class="profile-preview-actions">
             {{#if currentUser.agreedToTerms.created}}
-                <a {{action 'close'}} class="close-link" rel="close">&times; {% trans "Close" %}</a>
+                <div class="row">
+                    <div class="col9">
+                        <div class="profile-preview-agreed">
+                            {{#if currentUser.agreedToTerms.created}}
+                                {% trans 'You have already agreed to these terms on ' %}
+                                {{localize currentUser.agreedToTerms.created formatting='d'}}
+                            {{/if}}
+                        </div>
+                    </div>
+                    <div class="col3">
+                        <a {{action 'close'}} class="btn close-terms">{% trans "Close" %}</a>
+                    </div>
+                </div>
             {{else}}
-                <a {{action 'rejectTerms'}} data-action-type="reject-terms" class="close-link" rel="close">&times; {% trans "I don't agree to this" %}</a>
-                <a {{action 'acceptTerms'}} data-action-type="accept-terms" class="go-to-profile" rel="close">
-                    {% trans 'Agree' %}&nbsp;&rsaquo;
+                <a {{action 'rejectTerms'}} data-action-type="reject-terms" class="btn">
+                    {% trans "Cancel" %}
                 </a>
-            {{/if}}
-
-            </div>
-            {{#if currentUser.agreedToTerms.created}}
-                <br/>
-                {% trans 'You have already agreed to these terms on ' %}
-                {{localize currentUser.agreedToTerms.created formatting='d'}}
+                <a {{action 'acceptTerms'}} data-action-type="accept-terms" class="btn">
+                    {% trans 'Agree' %}
+                </a>
             {{/if}}
         </div>
     </div>
