--- a/bluebottle/bb_projects/templates/bb_projects/manage/_project_list_create_btn.hbs
+++ b/bluebottle/bb_projects/templates/bb_projects/manage/_project_list_create_btn.hbs
@@ -2,7 +2,7 @@
 
 {% tplhandlebars "_project_list_create_btn" %}
     <div class="l-sidebar">
-        {{#link-to "myProject.start" 'new' elementId="create_project" tagName="button" class="btn btn-primary btn-iconed"}}
+        {{#link-to "projectStart"  elementId="create_project" tagName="button" class="btn btn-primary btn-iconed"}}
             <span class="flaticon solid lightbulb-3"></span>
             {% trans "Create new campaign" %}
         {{/link-to}}
